Refactor error messages and improve string formatting across various classes; update test assertion in FileLoaderTest